# CIVMAppStreamClient

./: README.md
client/projects/android/adt/: .cproject  .project  AndroidManifest.xml  ant.properties  build.xml
client/projects/android/adt/jni/: Android.mk  Application.mk
client/projects/android/adt_android_helper_library/: .gitignore  .project  AndroidManifest.xml  ant.properties  build.xml
client/projects/android/adt_firetv/: .classpath  .cproject  .project  AndroidManifest.xml  ant.properties  build.xml  lint.xml  project.properties
client/projects/ios/AppStreamSampleClient/AppStreamSampleClient/: AppStreamSampleClient-Info.plist  AppStreamSampleClient-Prefix.pch  AppStreamSampleClientAppDelegate.h  AppStreamSampleClientAppDelegate.m  AppStreamSampleClientViewController.h  AppStreamSampleClientViewController.m  main.m
client/projects/ios/AppStreamSampleClient/AppStreamSampleClient.xcodeproj/: project.pbxproj
client/projects/ios/AppStreamSampleClient/scripts/: build_ffmpeg_ios.sh  build_opus_ios.sh
client/projects/osx/AppStreamSampleClient/AppStreamSampleClient/: AppStreamGLView.h  AppStreamGLView.m  AppStreamSampleClient-Info.plist  AppStreamSampleClient-Prefix.pch  AppStreamSampleClientAppDelegate.h  AppStreamSampleClientAppDelegate.m  AppStreamSampleClientWindowController.h  AppStreamSampleClientWindowController.m  AppStreamSampleClientWindowController.xib  HostInfo.plist
client/projects/osx/AppStreamSampleClient/AppStreamSampleClient.xcodeproj/: project.pbxproj
client/projects/windows/: CMakeLists.txt
client/src/: AppStreamWrapper.cpp  AppStreamWrapper.h  AudioDecoder.h  AudioModule.cpp  AudioModule.h  AudioPipeline.h  AudioRenderer.cpp  AudioRenderer.h  Config.h  RawAudioFrameAllocator.h  TextHelper.cpp  TextHelper.h  VideoDecoder.h  VideoModule.cpp  VideoModule.h  VideoPipeline.cpp  VideoPipeline.h  VideoRenderer.cpp  VideoRenderer.h  platformBindings.h
client/src/android/jni/: Android.mk  AndroidAudioRenderer.cpp  AndroidAudioRenderer.h  AndroidOpusDecoder.cpp  AndroidOpusDecoder.h  AndroidVideoDecoder.cpp  AndroidVideoDecoder.h  AudioPipeline.cpp  OpenSLAudio.cpp  OpenSLAudio.h  VideoPipeline.cpp  jniBindings.cpp  jniBindings.h  log.h
client/src/android/res/drawable/: button_down.xml  button_up.xml  dialog_body.xml  dialog_title.xml
client/src/android/res/layout/: activity_sample_client.xml  game.xml  server_address.xml
client/src/android/res/values/: strings.xml
client/src/android/res_fire_client/drawable/: button.xml  button_hover.xml  dialog_rounded.xml
client/src/android/res_fire_client/layout/: fatal_error.xml  game.xml
client/src/android/res_fire_client/layout-notouch/: game.xml
client/src/android/res_fire_client/values/: styles.xml
client/src/android/res_fire_client/values-v11/: styles.xml
client/src/android/res_fire_client/values-v14/: styles.xml
client/src/apple/ios/: AppStreamClient.h  AppStreamClient.m  AppStreamInputTextField.h  AppStreamInputTextField.m  CoreAudioRenderer.cpp  CoreAudioRenderer.h  VideoPipeline.cpp
client/src/apple/ios/DES/: DESDialog.h  DESDialog.m  InputTextField.h  InputTextField.m
client/src/apple/ios/ui/: GradientView.h  GradientView.m  MessageView.h  MessageView.m
client/src/apple/osx/: AppStreamClient.h  AppStreamClient.m  CoreAudioRenderer.cpp  CoreAudioRenderer.h  VideoPipeline.cpp
client/src/apple/osx/DES/: DESDialogWindowController.h  DESDialogWindowController.m  DESDialogWindowController.xib
client/src/apple/shared/: AudioPipeline.cpp  constants.h  platformBindings.cpp
client/src/directX_renderer/: DirectXRenderer.cpp  DirectXRenderer.h  DirectXTextBox.h  DumpFrameTest.cpp  DumpFrameTest.h  GDICapture.cpp  GDICapture.h  IScreenCapture.h
client/src/dummyaudio_renderer/: DummyAudioRenderer.cpp  DummyAudioRenderer.h
client/src/ffmpeg_decoder/: AvHelper.cpp  AvHelper.h  H264ToYuv.cpp  H264ToYuv.h
client/src/h264_utility/: BitStreamReader.cpp  BitStreamReader.h  NALUtils.cpp  NALUtils.h
client/src/headless_audio_decoder/: HeadlessAudioDecoder.cpp  HeadlessAudioDecoder.h
client/src/headless_audio_renderer/: HeadlessAudioRenderer.cpp  HeadlessAudioRenderer.h
client/src/headless_client/: AppStreamClientDefines.h  AppStreamClientFileInput.cpp  AppStreamClientFileInput.h  AppStreamClientHelpers.h  AppStreamHeadlessClient.cpp  AudioPipeline.cpp  HeadlessClient.cpp  HeadlessClient.h  VideoPipeline.cpp  log.h  platformBindings.cpp
client/src/headless_video_decoder/: HeadlessVideoDecoder.cpp  HeadlessVideoDecoder.h
client/src/headless_video_renderer/: HeadlessVideoRenderer.cpp  HeadlessVideoRenderer.h
client/src/opengl_renderer/: OGLRenderer.cpp  OGLRenderer.h
client/src/opus_decoder/: OpusDecoder.cpp  OpusDecoder.h
client/src/portaudio_renderer/: PortAudioRenderer.cpp  PortAudioRenderer.h
client/src/windows/: AppStreamClient.cpp  AppStreamClient.h  AppStreamClient.rc  AudioPipeline.cpp  ClientWindow.cpp  ClientWindow.h  VideoPipeline.cpp  log.h  platformBindings.cpp  resource.h
client/src/windows/DES/: AppStreamClientFileInput.cpp  AppStreamClientFileInput.h  AppStreamConnectionDefaults.h  EntitlementRetriever.h  EntitlementRetrieverWindows.cpp  WinEntitlementPromptDlg.cpp  WinEntitlementPromptDlg.h
client/src/windows/InputHandling/: WindowInputCapture.cpp  WindowInputCapture.h
common/: Util.h
server/common/: FrameAllocators.h  HostedApplication.h  ISynchSourceXStx.h  ServerManagerListener.cpp  ServerManagerListener.h  XStxExampleServer.cpp  YuvFrame.cpp  YuvFrame.h
server/common/Color/: ColorConversions.cpp  ColorConversions.h
server/common/windows/Audio/: Audio.cpp  Audio.h
server/common/windows/Capture/: DXCapture.cpp  DXCapture.h  GDICapture.h
server/common/windows/Game/: GameWindow.cpp  GameWindow.h
server/windows/SimpleDirectXServer/: ColorConversions.cpp  ColorConversions.h  SimpleDirectXServer.sln  SimpleDirectXServer.vcxproj  as_001.x  flatshaded.fx  main.cpp
server/windows/XStxDirectXServer/: CMakeLists.txt  Game.cpp  Game.h  HostedApplicationDirectX.cpp
server/windows/XStxDirectXServer/resources/: PixelShader.cso  VertexShader.cso
(+37 files in other folders)
